--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 PORT = 4000
-MONGOOSE_CONNECTION = "mongodb+srv://danban_12:0975695007Dan@atlascluster.u65dwhc.mongodb.net/shop?retryWrites=true&w=majority"
+MONGOOSE_CONNECTION = "MONGOOSE_CONNECTION"
