--- a/server/package.json
+++ b/server/package.json
@@ -19,9 +19,6 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.1",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.22",
-    "pg": "^8.10.0",
-    "pg-hstore": "^2.3.4",
-    "sequelize": "^6.31.1"
+    "nodemon": "^2.0.22"
   }
 }
