--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "start": "node index.js",
-    "start:dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "build": "npm i" 
   },
   "author": "",
   "license": "ISC",
