--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js",
-    "build": "node build --output public" 
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
